[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/menuInicial.gd" type="Script" id=1]
[ext_resource path="res://Assets-MNR/Notalot35Regular-8DeD.ttf.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets-MNR/Default_generate_a_pixel_art_about_recycling_game_1.jpg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=10]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.721569 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.721569 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.721569 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.721569 )
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.815686 )

[sub_resource type="Theme" id=6]
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[node name="menuInicial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 272.0 ],
"_edit_vertical_guides_": [ 480.0 ]
}

[node name="DefaultGenerateAPixelArtAboutRecyclingGame1" type="Sprite" parent="."]
position = Vector2( 239.825, 136.11 )
scale = Vector2( 0.370927, 0.384958 )
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 272.0
color = Color( 0, 0, 0, 0.247059 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = -65.5
margin_right = 111.0
margin_bottom = -32.5
custom_colors/font_color = Color( 0.509804, 1, 0.423529, 1 )
custom_fonts/font = SubResource( 10 )
text = "RECYCLING MAT"

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 50.0
margin_right = 33.0
margin_bottom = 118.0
theme = SubResource( 6 )

[node name="startButton" type="Button" parent="controls"]
margin_right = 65.0
margin_bottom = 11.0
custom_colors/font_color_focus = Color( 0.478431, 0.913725, 0.313726, 1 )
custom_colors/font_color_hover = Color( 0.478431, 0.913725, 0.313726, 1 )
custom_colors/font_color_pressed = Color( 0.117647, 0.52549, 0, 1 )
custom_constants/hseparation = 1
custom_fonts/font = SubResource( 7 )
text = "Start"

[node name="tutorialButton" type="Button" parent="controls"]
margin_top = 15.0
margin_right = 65.0
margin_bottom = 26.0
custom_colors/font_color_focus = Color( 0.541176, 0.878431, 0.309804, 1 )
custom_colors/font_color_hover = Color( 0.478431, 0.913725, 0.313726, 1 )
custom_colors/font_color_pressed = Color( 0.117647, 0.52549, 0, 1 )
custom_constants/hseparation = 1
custom_fonts/font = SubResource( 8 )
text = "Tutorial"

[node name="exitButton" type="Button" parent="controls"]
margin_top = 30.0
margin_right = 65.0
margin_bottom = 41.0
custom_colors/font_color_focus = Color( 0.541176, 0.878431, 0.309804, 1 )
custom_colors/font_color_hover = Color( 0.478431, 0.913725, 0.313726, 1 )
custom_colors/font_color_pressed = Color( 0.117647, 0.52549, 0, 1 )
custom_constants/hseparation = 1
custom_fonts/font = SubResource( 9 )
text = "Exit Game"

[connection signal="pressed" from="controls/startButton" to="." method="_on_startButton_pressed"]
[connection signal="pressed" from="controls/tutorialButton" to="." method="_on_tutorialButton_pressed"]
[connection signal="pressed" from="controls/exitButton" to="." method="_on_exitButton_pressed"]
